--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 		</nav>
 	</header>
 	<main ng-view></main>
-	<script src="angular.min.js"></script>
-	<script src="angular-route.min.js"></script>
-	<script src="main.js"></script>
+	<script src="./angular.min.js"></script>
+	<script src="./angular-route.min.js"></script>
+	<script src="./main.js"></script>
 </body>
 </html>
