--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<base href="/">
+	<base href="/AngularJS-ngRouter-demo/">
 	<style>
 		nav a {display: block;}
 	</style>
@@ -15,8 +15,8 @@
 		</nav>
 	</header>
 	<main ng-view></main>
-	<script src="./angular.min.js"></script>
-	<script src="./angular-route.min.js"></script>
-	<script src="./main.js"></script>
+	<script src="angular.min.js"></script>
+	<script src="angular-route.min.js"></script>
+	<script src="main.js"></script>
 </body>
 </html>
