--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<title>Document</title>
-	<base href="/AngularJS-ngRouter-demo">
+	<base href="/AngularJS-ngRouter-demo/">
 	<style>
 		nav a {display: block;}
 	</style>
@@ -11,12 +11,12 @@
 <body ng-app="app">
 	<header ng-controller="HeaderCtrl">
 		<nav>
-			<a href="/users">User list</a>
+			<a href="./users">User list</a>
 		</nav>
 	</header>
 	<main ng-view></main>
-	<script src="./angular.min.js"></script>
-	<script src="./angular-route.min.js"></script>
-	<script src="./main.js"></script>
+	<script src="angular.min.js"></script>
+	<script src="angular-route.min.js"></script>
+	<script src="main.js"></script>
 </body>
 </html>
